--- a/css.css
+++ b/css.css
@@ -1,7 +1,7 @@
 .row {position :relative;
 top :5px;}
 
-#wall{ background: #FC466B; 
+#wall{
 background: linear-gradient(to top, #3F5EFB, #FC466B);
 #element
  {padding:0px ;
