--- a/module2-solution/css.css
+++ b/module2-solution/css.css
@@ -25,7 +25,7 @@ position :relative;
 
 * 
 {box-sizing: border-box;
-font-family: cursive;}
+ font-family: "Comic Sans MS", cursive, sans-serif;}
 
 p{padding:30px 10px 10px 10px;
 font-size:15px;
